Fixing align menu toggle

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -269,7 +269,7 @@
 
     .menuToggle {
         display: block;
-        margin: 2.3rem 0 0 1rem;
+        margin: 2.41rem 0 0 1rem;
         /* width: 1rem; */
         color: #fff;
     }
